fix template gap

--- a/frontend/src/styles/template.css
+++ b/frontend/src/styles/template.css
@@ -4,8 +4,8 @@
     border: 1px solid black;
     padding: 0.5rem;
     border-radius: 1rem;
-    width: 45vw; 
-    height: 45vw;
+    width: 43vw; 
+    height: 43vw;
 }
 
 .workout-template {
