--- a/frontend/src/styles/userHome.css
+++ b/frontend/src/styles/userHome.css
@@ -1,5 +1,5 @@
 .user-home {
-    margin: 1rem;
+    margin: 6vw;
     overflow-y: scroll;
     margin-bottom: 5rem;
 }
@@ -33,5 +33,5 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    row-gap: 0.25rem;
+    gap: 2vw;
 }
